2006-05-17  Olly Betts  <olly@survex.com>  (tiny change)
	and Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* bin/autoreconf.in: Pass the directory argument to
	`require_configure_ac'.  Fix comment.
	* tests/torture.at (Configuring subdirectories): Expose this.
	Reported by Olly Betts.

2006-05-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/Automake/Configure_ac.pm, lib/Automake/Channels.pm,
	lib/Automake/FileUtils.pm, lib/Automake/Struct.pm: Sync from
	Automake as follows:

	* lib/Autom4te/Configure_ac.pm (find_configure_ac): Use
	`$configure_in' instead of `configure.in', to preserve
	directory component.

2006-05-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* config/config.guess, config/config.sub, config/texinfo.tex,
	doc/make-stds.texi, doc/standards.texi: Sync from upstream.

2006-05-14  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/autoconf/headers.m4 (AC_HEADER_STDBOOL): Fix overly-picky
	test for C99 conformance; (bool) 0.5 is an integer constant
	expression, but (bool) -0.5 is not.  Problem reported by Fedor
	Sergeev in <http://forum.sun.com/jive/thread.jspa?threadID=96202>.

2006-05-13  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi (Particular Programs): AC_PROG_MKDIR_P now
	sets MKDIR_P, not mkdir_p, to avoid collisions with Automake.
	Warn about obsolete install-sh files.  Remove stray sentence
	fragment and fix cross reference.
	* lib/autoconf/programs.m4 (AC_PROG_INSTALL): Don't insist on
	install -d; this undoes the 2006-05-10 change.
	(MKDIR_P): Mark with AN_MAKEVAR.
	(AC_PROG_MKDIR_P): Fall back on $ac_install_sh, not $INSTALL, so
	that we don't require $INSTALL to be thread-safe.  Move comments
	out of generated code.  Require AC_CONFIG_AUX_DIR_DEFAULT instead
	of AC_PROG_INSTALL.  Output a message saying that we're checking
	mkdir -p.  Set MKDIR_P rather than mkdir_p.  Do special magic for
	MKDIR_P instead of AC_SUBST.
	* lib/autoconf/status.m4 (_AC_OUTPUT_FILE, _AC_OUTPUT_CONFIG_STATUS):
	Special magic for MKDIR_P, too.