@@ -1,19 +1,19 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.36.
-.TH AUTORECONF "1" "April 2006" "autoreconf 2.59d" "User Commands"
+.TH AUTORECONF "1" "May 2006" "autoreconf 2.59d" "User Commands"
 .SH NAME
 autoreconf \- Update generated configuration files
 .SH SYNOPSIS
 .B autoreconf
-[\fIOPTION\fR] ... [\fICONFIGURE-AC or DIRECTORY\fR] ...
+[\fIOPTION\fR] ... [\fIDIRECTORY\fR] ...
 .SH DESCRIPTION
 Run `autoconf' (and `autoheader', `aclocal', `automake', `autopoint'
 (formerly `gettextize'), and `libtoolize' where appropriate)
-repeatedly to remake the GNU Build System files in the DIRECTORIES or
-the directory trees driven by CONFIGURE\-AC (defaulting to `.').
+repeatedly to remake the GNU Build System files in specified
+DIRECTORIES and their subdirectories (defaulting to `.').
 .PP
 By default, it only remakes those files that are older than their
-predecessors.  If you install new versions of the GNU Build System,
-running `autoreconf' remakes all of the files by giving it the
+sources.  If you install new versions of the GNU Build System,
+you can make `autoreconf' remake all of the files by giving it the
 `\-\-force' option.
 .SS "Operation modes:"
 .TP
